<resources>
    <string name="app_name">Demo SQLite</string>
    <string name="title_toolbar">แอพของอึ่ง</string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">ชื่อ</string>
    <string name="surname">นามสกุล</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="age">อายุ</string>
    <string name="allergic">อาการแพ้ยา</string>
    <string name="detail">รายละเอียดอาการ</string>

</resources>
