<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <ScrollView
        android:layout_above="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin1"
            android:orientation="vertical">

            <!--Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <!--Surname-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <!--Gender-->
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender :"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ragGender"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textStyle="bold" />

            </RadioGroup>

            <!--Age-->
            <TextView
                android:textColor="#f12626"
                android:textStyle="bold"
                android:textSize="@dimen/h2"
                android:text="@string/age"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spnAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--Allergic-->
            <CheckBox
                android:id="@+id/chbAllergic"
                android:textStyle="bold"
                android:text="@string/allergic"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--Detail-->
            <TextView
                android:textColor="#1329e9"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="@dimen/h2"
                android:text="@string/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="textMultiLine"
                android:lines="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:text="Save Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>